# ca2-lowluds-ai

./: README.md
form/: CMakeLists.txt  _.cpp  _.h  _app.h  _dependencies.txt  _factory.cpp  _fedora_kde_35_deps.txt  _main.inl  _main_.inl  _main_fedora_kde_35.inl  _packages.txt  aaa__library.h  and_ca2_lowluds_ai_form.vcxproj  and_simple_form.vcxproj.filters  app-Info.plist  app_simple_form.cbp  app_simple_form.def  application.cpp  application.h  ca2_lowluds_ai_form.cbp  ca2_lowluds_ai_form.def  ca2_lowluds_ai_form.nsi  ca2_lowluds_ai_form.vcxproj  ca2_lowluds_ai_form.vcxproj.filters  clang_ca2_lowluds_ai_form.cbp  clang_simple_form.cbp  cpp.txt  data.txt  deployment.rc  deps.txt  document.cpp  document.h  form.cpp  form.h  form_001.cpp  form_001.h  form_002.cpp  form_002.h  frame.cpp  frame.h  (+32 more)
form/BundleArtifacts/: x86.txt
form/_____operating_system/windows/: _dependencies.txt  _main.inl  _packages.txt  _static_factory.inl
form/__implement/: CMakeLists.txt  Package.appxmanifest  Package10.appxmanifest  _static_factory_.inl  main.cpp  nord_impl_ca2_lowluds_ai_form.vcxproj  nord_impl_ca2_lowluds_ai_form.vcxproj.filters  shared_app_simple_form.vcxproj  shared_app_simple_form.vcxproj.filters  shared_ca2_lowluds_ai_form.vcxproj  uwp_app_simple_form.vcxproj  uwp_app_simple_form.vcxproj.filters  uwp_app_simple_form_TemporaryKey.pfx  uwp_ca2_lowluds_ai_form.vcxproj  uwp_ca2_lowluds_ai_form.vcxproj.filters
form/__implement/_app_simple_form.xcodeproj/xcshareddata/xcschemes/: output_app_simple_form.xcscheme
form/__implement/_ca2_lowluds_ai_form.xcodeproj/: project.pbxproj
form/__implement/_ca2_lowluds_ai_form.xcodeproj/xcshareddata/xcschemes/: _ca2_lowluds_ai_form.xcscheme  output_ca2_lowluds_ai_form.xcscheme
form/__implement/_ios_ca2_lowluds_ai_form.xcodeproj/: project.pbxproj
form/__implement/ca2_lowluds_ai_form.xcodeproj/: project.pbxproj
form/__implement/ios/: Launch Screen.storyboard
form/__implement/macos/en.lproj/: InfoPlist.strings
form/aaa/: _static_factory.inl  _static_factory_.inl  _static_factory_exchange.inl  _static_factory_fedora_kde_35.inl
form/android.packaging/res/values/: strings.xml
form/app_simple_form.xcodeproj/: project.pbxproj
form/ca2_lowluds_ai_form.xcodeproj/: project.pbxproj
form/wiosapp_core_simple_formTests/: wiosapp_core_beatmapperTests.m
(+13 files in other folders)
